tests/testfiles/passing/invalid_identifiers/keyword_as_id_signed.c
/* Keyword as identifier: signed */
int main() {
    int signed;
    signed = 23;
}